@@ -1444,10 +1444,18 @@ void CamuleApp::ListenSocketHandler(wxSocketEvent& event)
 {
 	wxASSERT(event.GetSocket()->IsKindOf(CLASSINFO(CListenSocket)));
 	CListenSocket *socket = (CListenSocket*) event.GetSocket();
-	if(!socket) {
-		// we are not mentally ready to receive anything
-		// or there is no socket on the event (got deleted?)
+	if (!socket) {
+		// This should never happen, anyway, there is nothing to do.
+		wxASSERT(0);
 		return;
+	}
+	if (!IsReady) {
+		// Even if we are not ready to start listening, we must 
+		// accept the connection, otherwise no other connection
+		// events will happen. So we Accept() it and destroy the
+		// socket imediately.
+		wxSocketBase *s = socket->Accept(false);
+		s->Destroy();
 	}
 	switch(event.GetSocketEvent()) {
 		case wxSOCKET_CONNECTION:
